tests/fixtures/errors/e0108_assign_const.mimz
// expect: E0108
module M {
  const C: int = 1
  out y: bit
  C = 1
  y = 0
}
